<resources>
  <string name="app_name">Navigation</string>

  <string name="home">Home</string>
  <string name="second">Second</string>
  <string name="third">Third</string>
  <string name="fill">Fill</string>
  <string name="filled">Filled</string>
</resources>
